--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,145 @@
-ultralytics
-opencv-python-headless
-flask
+annotated-types==0.5.0
+anyio==3.7.1
+appdirs==1.4.4
+apturl==0.5.2
+asgiref==3.7.2
+attrs==21.2.0
+automata-lib==8.1.0
+bcrypt==4.0.1
+beautifulsoup4==4.10.0
+beniget==0.4.1
+binwalk==2.3.3
+blinker==1.4
+Brlapi==0.8.3
+Brotli==1.0.9
+cached_method==0.1.0
+certifi==2020.6.20
+cffi==1.16.0
+chardet==4.0.0
+click==8.0.3
+colorama==0.4.4
+command-not-found==0.3
+cryptography==39.0.2
+cupshelpers==1.0
+cycler==0.11.0
+dbus-python==1.2.18
+decorator==4.4.2
+defer==1.0.6
+distro==1.7.0
+distro-info==1.1+ubuntu0.1
+Django==4.2.6
+django-admin==2.0.2
+django-cors-headers==4.3.0
+django-excel-response2==3.0.6
+django-six==1.0.5
+djangorestframework==3.14.0
+duplicity==0.8.21
+ecdsa==0.18.0
+excel-base==1.0.4
+exceptiongroup==1.1.3
+fastapi==0.103.1
+fasteners==0.14.1
+fonttools==4.29.1
+frozendict==2.3.8
+fs==2.4.12
+future==0.18.2
+gast==0.5.2
+greenlet==2.0.2
+h11==0.14.0
+html5lib==1.1
+httplib2==0.20.2
+idna==3.3
+importlib-metadata==4.6.4
+isoweek==1.3.3
+jeepney==0.7.1
+Jinja2==3.1.2
+keyring==23.5.0
+kiwisolver==1.3.2
+language-selector==0.1
+launchpadlib==1.10.16
+lazr.restfulclient==0.14.4
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.20.0
+lxml==4.8.0
+lz4==3.1.3+dfsg
+macaroonbakery==1.3.1
+Mako==1.1.3
+MarkupSafe==2.0.1
+matplotlib==3.5.1
+monotonic==1.6
+more-itertools==8.10.0
+mpmath==0.0.0
+netifaces==0.11.0
+networkx==3.2
+numpy==1.21.5
+oauthlib==3.2.0
+olefile==0.46
+packaging==21.3
+paramiko==2.9.3
+passlib==1.7.4
+pexpect==4.8.0
+Pillow==9.0.1
+ply==3.11
+protobuf==3.12.4
+psycopg2-binary==2.9.6
+ptyprocess==0.7.0
+pyasn1==0.5.0
+pycairo==1.20.1
+pycparser==2.21
+pycups==2.0.1
+pydantic==2.4.2
+pydantic_core==2.10.1
+PyGObject==3.42.1
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyMySQL==1.0.3
+PyNaCl==1.5.0
+PyOpenGL==3.1.5
+pyparsing==2.4.7
+PyQt5==5.15.6
+PyQt5-sip==12.9.1
+pyqtgraph==0.12.4
+pyRFC3339==1.1
+python-apt==2.4.0+ubuntu2
+python-dateutil==2.8.1
+python-debian==0.1.43+ubuntu1.1
+python-jose==3.3.0
+python-multipart==0.0.6
+pythran==0.10.0
+pytz==2022.1
+pyxdg==0.27
+PyYAML==5.4.1
+reportlab==3.6.8
+requests==2.25.1
+rsa==4.9
+scipy==1.8.0
+screen==1.0.1
+SecretStorage==3.3.1
+six==1.16.0
+sniffio==1.3.0
+soupsieve==2.3.1
+SQLAlchemy==2.0.7
+sqlparse==0.4.4
+starlette==0.27.0
+sympy==1.9
+systemd-python==234
+TimeConvert==3.0.13
+typing_extensions==4.8.0
+tzlocal==5.1
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufoLib2==0.13.1
+ufw==0.36.1
+unattended-upgrades==0.1
+unicodedata2==14.0.0
+urllib3==1.26.5
+usb-creator==0.3.7
+uvicorn==0.20.0
+wadllib==1.3.6
+webencodings==0.5.1
+wsproto==1.0.0
+xdg==5
+xkit==0.0.0
+xlwt==1.3.0
+zipp==1.0.0
